[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI_Theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/main_menu.gd" type="Script" id=2]
[ext_resource path="res://Girasolesfondo.png" type="Texture" id=3]
[ext_resource path="res://Estilo/botonsinestilo.tres" type="StyleBox" id=4]
[ext_resource path="res://Estilo/botonstilo.tres" type="StyleBox" id=5]

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Fondo" type="Button" parent="."]
margin_left = 417.0
margin_top = 212.0
margin_right = 609.0
margin_bottom = 297.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.5
margin_top = -61.0
margin_right = 60.5
margin_bottom = 61.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="Button" parent="VBoxContainer"]
margin_right = 121.0
margin_bottom = 31.0
focus_mode = 0
enabled_focus_mode = 0
text = "PLAY"
flat = true

[node name="option_window" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -206.0
margin_top = -116.5
margin_right = 206.0
margin_bottom = 116.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="option_window"]
margin_left = 14.9831
margin_top = 61.4306
margin_right = 183.983
margin_bottom = 86.4306
text = "Music Volume"

[node name="volumen" type="HSlider" parent="option_window"]
margin_left = 209.739
margin_top = 66.5116
margin_right = 403.739
margin_bottom = 82.5116
max_value = 1.8
step = 0.1
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[connection signal="pressed" from="VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="value_changed" from="option_window/volumen" to="." method="_on_volumen_value_changed"]
